--- a/disk_usage_cronjob/Dockerfile
+++ b/disk_usage_cronjob/Dockerfile
@@ -3,9 +3,11 @@ FROM python:3.8-slim-buster
 # set the working directory in the container
 WORKDIR /app
 # install openssh & sshpass in the docker container
-RUN apt-get update && apt-get install -y openssh-client && apt-get install sshpass
+RUN apt-get update && apt-get install -y sshpass openssh-client
 # generage ssh key with passphrase password
 RUN ssh-keygen -t rsa -f /root/.ssh/id_rsa -P password
+# change permissions of id_rsa
+RUN chmod 400 /root/.ssh/id_rsa.pub
 # copy the dependencies file to the working directory
 COPY requirements.txt .
 # copy the environment variables
