--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
         apt-get update &&
         apt install -y openssh-server &&
         service ssh start &&
-        usermod --password $$(echo influxdb | openssl passwd -1 -stdin) influxdb &&
+        usermod --password $$(echo ${INFLUXDB_CONTAINER_PASSWORD} | openssl passwd -1 -stdin) ${INFLUXDB_CONTAINER_USER} &&
         /bin/sh -c /entrypoint.sh
         "
     networks:
@@ -42,6 +42,8 @@ services:
     restart: always
     ports:
       - "2222:22"
+    env_file:
+      - ".env"
     build:
       context: disk_usage_cronjob
     depends_on:
@@ -50,7 +52,7 @@ services:
     # Waits for influxdb container to start to copy ssh key to the authorized_keys
     command: >
       sh -c "
-        /wait-for-it.sh influxdb:8086 --strict -- sshpass -p influxdb ssh-copy-id -i /root/.ssh/id_rsa.pub -o StrictHostKeyChecking=no influxdb@influxdb &&
+        /wait-for-it.sh influxdb:8086 --strict -- sshpass -p ${INFLUXDB_CONTAINER_PASSWORD} ssh-copy-id -i /root/.ssh/id_rsa.pub -o StrictHostKeyChecking=no ${INFLUXDB_CONTAINER_USER}@${INFLUXDB_CONTAINER_HOST} &&
         python main.py
         "
     stop_signal: SIGINT
