--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,7 @@ services:
     ports:
       - "2222:22"
     env_file:
-      - ".env.example"
+      - "./disk_usage_cronjob/.env"
     build:
       context: disk_usage_cronjob
     depends_on:
