--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,7 @@ services:
     # Waits for influxdb container to start to copy ssh key to the authorized_keys
     command: >
       sh -c "
-        echo ${INFLUXDB_CONTAINER_USER}@${INFLUXDB_CONTAINER_HOST} &&
+        echo "${INFLUXDB_CONTAINER_USER}"@"${INFLUXDB_CONTAINER_HOST}" &&
         python main.py
         "
     stop_signal: SIGINT
