--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,10 +50,12 @@ services:
     # Waits for influxdb container to start to copy ssh key to the authorized_keys
     command: >
       sh -c "
-        echo "============================================================="
-        echo "============================================================="
-        echo $(INFLUXDB_CONTAINER_USER)
-        echo $$(INFLUXDB_CONTAINER_USER)
+        echo "=============================================================" &&
+        echo "=============================================================" &&
+        echo ${INFLUXDB_CONTAINER_PASSWORD} &&
+        echo $(INFLUXDB_CONTAINER_PASSWORD) &&
+        echo $(INFLUXDB_CONTAINER_USER) &&
+        echo $$(INFLUXDB_CONTAINER_USER) &&
         echo "${INFLUXDB_CONTAINER_USER}"@"${INFLUXDB_CONTAINER_HOST}" &&
         python main.py
         "
