--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,7 +52,7 @@ services:
       sh -c "
         echo "=============================================================" &&
         echo "=============================================================" &&
-        echo "${INFLUXDB_CONTAINER_PASSWORD}" &&
+        echo "$${INFLUXDB_CONTAINER_PASSWORD}" &&
         echo "${INFLUXDB_CONTAINER_USER}"@"${INFLUXDB_CONTAINER_HOST}" &&
         python main.py
         "
