--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,12 +50,10 @@ services:
     # Waits for influxdb container to start to copy ssh key to the authorized_keys
     command: >
       sh -c "
-        echo "=============================================================" &&
-        echo "=============================================================" &&
-        echo "$${INFLUXDB_CONTAINER_PASSWORD}" &&
-        echo "$${INFLUXDB_CONTAINER_USER}"@"$${INFLUXDB_CONTAINER_HOST}" &&
-        python main.py
-        "
+          /wait-for-it.sh $${INFLUXDB_CONTAINER_HOST}:8086 --strict -- sshpass -p influxdb ssh-copy-id -i /root/.ssh/id_rsa.pub -o StrictHostKeyChecking=no $${INFLUXDB_CONTAINER_USER}@$${INFLUXDB_CONTAINER_HOST} &&
+          python main.py
+          "
+
     stop_signal: SIGINT
     stdin_open: true
     tty: true
