--- a/disk_usage_cronjob/.env.example
+++ b/disk_usage_cronjob/.env.example
@@ -6,5 +6,6 @@ INFLUXDB_BUCKET=tradlens_db
 INFLUXDB_ADMIN_TOKEN=this-is-my-super-secret-token
 
 INFLUXDB_CONTAINER_HOST=influxdb
+INFLUXDB_CONTAINER_PORT=8086
 INFLUXDB_CONTAINER_USER=influxdb
 INFLUXDB_CONTAINER_PASSWORD=influxdb
