--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,6 @@ services:
     restart: always
     ports:
       - "8086:8086"
-      - "2223:22"
     stdin_open: true
     tty: true
     volumes:
@@ -50,7 +49,7 @@ services:
     # Waits for influxdb container to start to copy ssh key to the authorized_keys
     command: >
       sh -c "
-          /wait-for-it.sh $${INFLUXDB_CONTAINER_HOST}:8086 --strict -- sshpass -p influxdb ssh-copy-id -i /root/.ssh/id_rsa.pub -o StrictHostKeyChecking=no $${INFLUXDB_CONTAINER_USER}@$${INFLUXDB_CONTAINER_HOST} &&
+          /wait-for-it.sh $${INFLUXDB_CONTAINER_HOST}:$${INFLUXDB_CONTAINER_PORT} --strict -- sshpass -p influxdb ssh-copy-id -i /root/.ssh/id_rsa.pub -o StrictHostKeyChecking=no $${INFLUXDB_CONTAINER_USER}@$${INFLUXDB_CONTAINER_HOST} &&
           python main.py
           "
 
