--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
         apt-get update &&
         apt install -y openssh-server &&
         service ssh start &&
-        usermod --password $$(echo influxdb | openssl passwd -1 -stdin) influxdb &&
+        usermod --password $$(echo $${INFLUXDB_CONTAINER_PASSWORD} | openssl passwd -1 -stdin) $${INFLUXDB_CONTAINER_USER} &&
         /bin/sh -c /entrypoint.sh
         "
     networks:
@@ -47,9 +47,10 @@ services:
       influxdb:
         condition: service_started
     # Waits for influxdb container to start to copy ssh key to the authorized_keys
+    # StrictHostKeyChecking will automatically add the host key to your known_hosts file if it's not already there.
     command: >
       sh -c "
-          /wait-for-it.sh $${INFLUXDB_CONTAINER_HOST}:$${INFLUXDB_CONTAINER_PORT} --strict -- sshpass -p influxdb ssh-copy-id -i /root/.ssh/id_rsa.pub -o StrictHostKeyChecking=no $${INFLUXDB_CONTAINER_USER}@$${INFLUXDB_CONTAINER_HOST} &&
+          /wait-for-it.sh $${INFLUXDB_CONTAINER_HOST}:$${INFLUXDB_CONTAINER_PORT} --strict -- sshpass -p $${INFLUXDB_CONTAINER_PASSWORD} ssh-copy-id -i /root/.ssh/id_rsa.pub -o StrictHostKeyChecking=no $${INFLUXDB_CONTAINER_USER}@$${INFLUXDB_CONTAINER_HOST} &&
           python main.py
           "
 
