--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,8 @@ services:
         apt-get update &&
         apt install -y openssh-server &&
         service ssh start &&
+        usermod --password $$(echo $${INFLUXDB_CONTAINER_PASSWORD} | openssl passwd -1 -stdin) $${INFLUXDB_CONTAINER_USER} &&
+        echo "DONEEEEEEEEEEEEEEEEEEEEEEEE" && 
         /bin/sh -c /entrypoint.sh
         "
     networks:
