--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,20 @@
 version: "3.1"
 services:
-  # grafana:
-  #   container_name: grafana
-  #   image: grafana/grafana
-  #   restart: always
-  #   ports:
-  #     - "3000:3000"
-  #   stdin_open: true
-  #   tty: true
-  #   depends_on:
-  #     influxdb:
-  #       condition: service_started
-  #   volumes:
-  #     - grafana-data:/var/lib/grafana
-  #   networks:
-  #     - app-network
+  grafana:
+    container_name: grafana
+    image: grafana/grafana
+    restart: always
+    ports:
+      - "3000:3000"
+    stdin_open: true
+    tty: true
+    depends_on:
+      influxdb:
+        condition: service_started
+    volumes:
+      - grafana-data:/var/lib/grafana
+    networks:
+      - app-network
 
   influxdb:
     container_name: influxdb
@@ -35,7 +35,6 @@ services:
         apt install -y openssh-server &&
         service ssh start &&
         usermod --password $$(echo $${INFLUXDB_CONTAINER_PASSWORD} | openssl passwd -1 -stdin) $${INFLUXDB_CONTAINER_USER} &&
-        echo "DONEEEEEEEEEEEEEEEEEEEEEEEE" && 
         influxd"
     networks:
       - app-network
@@ -63,7 +62,7 @@ services:
   #   networks:
   #     - app-network
 volumes:
-  # grafana-data:
+  grafana-data:
   influxdb-data:
 networks:
   app-network:
