--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,7 @@ services:
     # StrictHostKeyChecking will automatically add the host key to your known_hosts file if it's not already there.
     command: >
       sh -c "
-          /wait-for-it.sh $${INFLUXDB_CONTAINER_HOST}:$${INFLUXDB_CONTAINER_PORT} --strict -- sshpass -p $${INFLUXDB_CONTAINER_PASSWORD} ssh-copy-id -i /root/.ssh/id_rsa.pub -o StrictHostKeyChecking=no $${INFLUXDB_CONTAINER_USER}@$${INFLUXDB_CONTAINER_HOST} &&
+          dockerize -wait tcp://$${INFLUXDB_CONTAINER_HOST}:$${INFLUXDB_CONTAINER_PORT} sshpass -p $${INFLUXDB_CONTAINER_PASSWORD} ssh-copy-id -i /root/.ssh/id_rsa.pub -o StrictHostKeyChecking=no $${INFLUXDB_CONTAINER_USER}@$${INFLUXDB_CONTAINER_HOST} &&
           python main.py
           "
     stop_signal: SIGINT
