--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,7 +54,7 @@ services:
     command: >
       sh -c "
         echo "$${INFLUXDB_CONTAINER_HOST}:$${INFLUXDB_CONTAINER_PORT}" && 
-        /wait-for-it.sh tcp://$${INFLUXDB_CONTAINER_HOST}:$${INFLUXDB_CONTAINER_PORT} --strict -- sshpass -p $${INFLUXDB_CONTAINER_PASSWORD} ssh-copy-id -i /root/.ssh/id_rsa.pub -o StrictHostKeyChecking=no $${INFLUXDB_CONTAINER_USER}@$${INFLUXDB_CONTAINER_HOST} &&
+        /wait-for-it.sh tcp://influxdb:8086 --strict -- sshpass -p $${INFLUXDB_CONTAINER_PASSWORD} ssh-copy-id -i /root/.ssh/id_rsa.pub -o StrictHostKeyChecking=no $${INFLUXDB_CONTAINER_USER}@$${INFLUXDB_CONTAINER_HOST} &&
         python main.py"
     stop_signal: SIGINT
     stdin_open: true
