--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,7 +55,7 @@ services:
       sh -c "
         /wait-for-it.sh https://www.google.com/ -- sshpass -p $${INFLUXDB_CONTAINER_PASSWORD} ssh-copy-id -i /root/.ssh/id_rsa.pub -o StrictHostKeyChecking=no $${INFLUXDB_CONTAINER_USER}@$${INFLUXDB_CONTAINER_HOST} &&
         python main.py"
-    stop_signal: SIGINT
+    # stop_signal: SIGINT
     stdin_open: true
     tty: true
     networks:
