--- a/disk_usage_cronjob/.env.example
+++ b/disk_usage_cronjob/.env.example
@@ -2,7 +2,7 @@ INFLUXDB_URL="http://influxdb:8086"
 INFLUXDB_USERNAME=admin
 INFLUXDB_PASSWORD=P@ssw0rd123
 INFLUXDB_ORG=my-org
-INFLUXDB_BUCKET=tradlens_db
+INFLUXDB_BUCKET=default
 INFLUXDB_ADMIN_TOKEN=this-is-my-super-secret-token
 
 INFLUXDB_CONTAINER_HOST=influxdb
