--- a/disk_usage_cronjob/requirements.txt
+++ b/disk_usage_cronjob/requirements.txt
@@ -1,52 +1,13 @@
-astroid==2.3.3
-async-generator==1.10
-attrs==21.2.0
-certifi==2020.12.5
-cffi==1.14.5
-chardet==4.0.0
-click==7.1.2
-cloudscraper==1.2.58
-colorama==0.4.3
-cryptography==3.4.7
-DateTime==4.3
-Flask==1.1.2
-fpdf==1.7.2
-fpdf2==2.0.6
-future==0.18.2
-h11==0.12.0
-idna==2.10
+certifi==2021.10.8
+charset-normalizer==2.0.9
+idna==3.3
+influxdb==5.3.1
 influxdb-client==1.24.0
-iso8601==0.1.14
-isort==4.3.21
-itsdangerous==1.1.0
-Jinja2==2.11.2
-lazy-object-proxy==1.4.3
-m3u8==0.8.0
-MarkupSafe==1.1.1
-mccabe==0.6.1
-numpy==1.19.4
-outcome==1.1.0
-Pillow==8.0.0
-pycparser==2.20
-pylint==2.4.4
-pyOpenSSL==20.0.1
-pyparsing==2.4.7
+msgpack==1.0.3
 python-dateutil==2.8.2
 python-dotenv==0.19.2
-pytz==2020.5
-requests==2.25.1
-requests-toolbelt==0.9.1
+pytz==2021.3
+requests==2.26.0
 Rx==3.2.0
-schedule==1.1.0
-selenium==4.0.0
-six==1.14.0
-sniffio==1.2.0
-sortedcontainers==2.4.0
-trio==0.19.0
-trio-websocket==0.9.2
-Unidecode==1.2.0
-urllib3==1.26.2
-Werkzeug==1.0.1
-wrapt==1.11.2
-wsproto==1.0.0
-zope.interface==5.2.0
+six==1.16.0
+urllib3==1.26.7
