--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
         echo 'PasswordAuthentication yes' >> /etc/ssh/sshd_config && 
         service ssh start &&
         usermod --password $$(echo $${INFLUXDB_CONTAINER_PASSWORD} | openssl passwd -1 -stdin) $${INFLUXDB_CONTAINER_USER} &&
-        influxd"
+        /bin/sh -c /entrypoint.sh"
     networks:
       - app-network
 
