--- a/k8s/deployments/grafana-deployment.yaml
+++ b/k8s/deployments/grafana-deployment.yaml
@@ -28,4 +28,5 @@ spec:
       volumes:
         - claimName: grafana-data
           name: grafana-data
-          persistentVolumeClaim: ~
+          persistentVolumeClaim:
+            claimName: grafana-data
