--- a/k8s/deployments/grafana-deployment.yaml
+++ b/k8s/deployments/grafana-deployment.yaml
@@ -25,3 +25,6 @@ spec:
             - mountPath: /var/lib/grafana
               name: grafana-data
       restartPolicy: Always
+      volumes:
+        - claimName: grafana-data
+          name: grafana-data
