--- a/k8s/services/grafana-service.yaml
+++ b/k8s/services/grafana-service.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: grafana-service
+  namespace: docker-influxdb-grafana
 spec:
-  # Default Service Type
   type: ClusterIP
   ports:
     - name: "grafana-port"
