--- a/k8s/ingress/ingress.yaml
+++ b/k8s/ingress/ingress.yaml
@@ -11,7 +11,10 @@ spec:
     - host: ec2-63-33-190-1.eu-west-1.compute.amazonaws.com
       http:
         paths:
-          - path: /
-            backend:
-              serviceName: grafana-service
-              servicePort: 3000
+          - pathType: Prefix
+            path: "/"
+            grafana:
+              service:
+                name: grafana-service
+                port:
+                  number: 3000
