--- a/k8s/services/grafana-service.yaml
+++ b/k8s/services/grafana-service.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   type: ClusterIP
   ports:
-    - name: "grafana-port"
+    - name: grafana-port
       targetPort: 3000
       port: 3000
   selector:
