--- a/k8s/ingress/ingress.yaml
+++ b/k8s/ingress/ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress-service
-  namespace: myapp
+  namespace: app
   annotations:
     INGRESS.kubernetes.io/rewrite-target: /
 spec:
