--- a/k8s/services/grafana-service.yaml
+++ b/k8s/services/grafana-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: grafana-service
-  namespace: myapp
+  namespace: app
 spec:
   type: ClusterIP
   ports:
