--- a/k8s/ingress/ingress.yaml
+++ b/k8s/ingress/ingress.yaml
@@ -3,8 +3,8 @@ kind: Ingress
 metadata:
   name: ingress-service
   namespace: app
-  annotations:
-    kubernetes.io/ingress.class: "nginx"
+  # annotations:
+  #   kubernetes.io/ingress.class: "nginx"
   labels:
     name: ingress-service
 spec:
