--- a/k8s/services/grafana-service.yaml
+++ b/k8s/services/grafana-service.yaml
@@ -7,6 +7,7 @@ spec:
   type: ClusterIP
   ports:
     - name: grafana-port
+      protocol: TCP
       targetPort: 3000
       port: 3000
   selector:
