--- a/k8s/ingress/ingress.yaml
+++ b/k8s/ingress/ingress.yaml
@@ -13,7 +13,7 @@ spec:
       http:
         paths:
           - pathType: Prefix
-            path: "/"
+            path: "/grafana"
             backend:
               service:
                 name: grafana-service
