--- a/k8s/ingress/ingress.yaml
+++ b/k8s/ingress/ingress.yaml
@@ -9,11 +9,11 @@ metadata:
     name: ingress-service
 spec:
   rules:
-    - host: ec2-63-33-190-1.eu-west-1.compute.amazonaws.com
+    - host: localhost
       http:
         paths:
           - pathType: Prefix
-            path: "/grafana/"
+            path: "/"
             backend:
               service:
                 name: grafana-service
