--- a/k8s/ingress/ingress.yaml
+++ b/k8s/ingress/ingress.yaml
@@ -3,20 +3,30 @@ kind: Ingress
 metadata:
   name: ingress-service
   namespace: app
-  # annotations:
-  #   kubernetes.io/ingress.class: "nginx"
+  annotations:
+    kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/rewrite-target: /
   labels:
     name: ingress-service
 spec:
   rules:
-    - host: myapp.info
-      http:
+    # - host: myapp.info
+    - http:
         paths:
           - pathType: Prefix
             path: "/"
             backend:
-              service:
-                name: grafana-service
-                port:
-                  number: 80
-  ingressClassName: nginx
+              serviceName: grafana-service
+              servicePort: 3000
+              # service:
+              #   name: grafana-service
+              #   port:
+              #     number: 80
+          # - pathType: Prefix
+          #   path: "/api/users/?(.*)"
+          #   backend:
+          #     service:
+          #       name: influxdb-service
+          #       port:
+          #         number: 3000
+  # ingressClassName: nginx
