--- a/k8s/services/influxdb-service.yaml
+++ b/k8s/services/influxdb-service.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: grafana-service
+  name: influxdb-service
   namespace: app
 spec:
   type: ClusterIP
   ports:
-    - name: grafana-port
+    - name: influxdb-port
       protocol: TCP
-      port: 3000
-      targetPort: 3000
+      port: 8086
+      targetPort: 8086
   selector:
-    app: grafana
+    app: influxdb
