--- a/k8s/ingress/ingress.yaml
+++ b/k8s/ingress/ingress.yaml
@@ -6,25 +6,25 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/use-regex: "true"
   labels:
     name: ingress-service
 spec:
   rules:
-    # - host: myapp.info
     - http:
         paths:
           - pathType: Prefix
-            path: "/"
+            path: "/influxdb"
+            backend:
+              service:
+                name: influxdb-service
+                port:
+                  number: 8086
+          - pathType: Prefix
+            path: "/?(.*)"
             backend:
               service:
                 name: grafana-service
                 port:
                   number: 3000
-          # - pathType: Prefix
-          #   path: "/api/users/?(.*)"
-          #   backend:
-          #     service:
-          #       name: influxdb-service
-          #       port:
-          #         number: 3000
   # ingressClassName: nginx
