--- a/k8s/ingress/ingress.yaml
+++ b/k8s/ingress/ingress.yaml
@@ -21,7 +21,7 @@ spec:
                 port:
                   number: 8086
           - pathType: Prefix
-            path: "/?(.*)"
+            path: "/grafana"
             backend:
               service:
                 name: grafana-service
