--- a/k8s/ingress/ingress.yaml
+++ b/k8s/ingress/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: app
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/use-regex: "true"
   labels:
     name: ingress-service
@@ -14,14 +14,14 @@ spec:
     - http:
         paths:
           - pathType: Prefix
-            path: "/influxdb"
+            path: /influxdb
             backend:
               service:
                 name: influxdb-service
                 port:
                   number: 8086
           - pathType: Prefix
-            path: "/grafana"
+            path: /grafana(/|$)(.*)
             backend:
               service:
                 name: grafana-service
