--- a/k8s/ingress/ingress.yaml
+++ b/k8s/ingress/ingress.yaml
@@ -14,14 +14,14 @@ spec:
     - http:
         paths:
           - pathType: Prefix
-            path: /influxdb
+            path: /influxdb/
             backend:
               service:
                 name: influxdb-service
                 port:
                   number: 8086
           - pathType: Prefix
-            path: /grafana(/|$)(.*)
+            path: /?(.*)
             backend:
               service:
                 name: grafana-service
