--- a/k8s/ingress/ingress.yaml
+++ b/k8s/ingress/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: app
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/use-regex: "true"
   labels:
     name: ingress-service
@@ -13,13 +13,13 @@ spec:
   rules:
     - http:
         paths:
-          - pathType: Prefix
-            path: /influxdb/
-            backend:
-              service:
-                name: influxdb-service
-                port:
-                  number: 8086
+          # - pathType: Prefix
+          #   path: /influxdb/
+          #   backend:
+          #     service:
+          #       name: influxdb-service
+          #       port:
+          #         number: 8086
           - pathType: Prefix
             path: /?(.*)
             backend:
