--- a/k8s/deployments/influxdb-deployment.yaml
+++ b/k8s/deployments/influxdb-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: influxdb
-          image: influxdb:1.8
+          image: influxdb:latest
           ports:
             - containerPort: 8086
           stdin: true
