--- a/k8s/ingress/ingress.yaml
+++ b/k8s/ingress/ingress.yaml
@@ -20,12 +20,12 @@ spec:
                 name: influxdb-service
                 port:
                   number: 8086
-          - pathType: Prefix
-            # path: /grafana/?(.*)
-            path: /(login|grafana)?(.*)
-            backend:
-              service:
-                name: grafana-service
-                port:
-                  number: 3000
+          # - pathType: Prefix
+          #   # path: /grafana/?(.*)
+          #   path: /(login|grafana)?(.*)
+          #   backend:
+          #     service:
+          #       name: grafana-service
+          #       port:
+          #         number: 3000
   # ingressClassName: nginx
