--- a/k8s/ingress/ingress.yaml
+++ b/k8s/ingress/ingress.yaml
@@ -14,7 +14,7 @@ spec:
     - http:
         paths:
           - pathType: Prefix
-            path: /(influxdb|dola)?(.*)
+            path: /(signin|influxdb)?(.*)
             backend:
               service:
                 name: influxdb-service
