--- a/k8s/ingress/ingress.yaml
+++ b/k8s/ingress/ingress.yaml
@@ -19,12 +19,12 @@ spec:
                 name: grafana-service
                 port:
                   number: 3000
-            path: /(login|grafana)?(.*)
+            path: /(login|grafana)
           - pathType: Prefix
             backend:
               service:
                 name: influxdb-service
                 port:
                   number: 8086
-            path: /(signin|influxdb)?(.*)
+            path: /(signin|influxdb)
   # ingressClassName: nginx
