--- a/k8s/ingress/ingress.yaml
+++ b/k8s/ingress/ingress.yaml
@@ -19,7 +19,7 @@ spec:
                 name: grafana-service
                 port:
                   number: 3000
-            path: /(login|grafana)
+            path: /(login|grafana)?(.*)
           - pathType: Prefix
             backend:
               service:
