--- a/k8s/ingress/ingress.yaml
+++ b/k8s/ingress/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: ingress-service
   namespace: app
   annotations:
-    kubernetes.io/ingress.class: "nginx"
+    # kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/use-regex: "true"
   labels:
@@ -20,11 +20,4 @@ spec:
                 port:
                   number: 3000
             path: /(login|grafana)?(.*)
-          - pathType: Prefix
-            backend:
-              service:
-                name: influxdb-service
-                port:
-                  number: 8086
-            path: /(signin|influxdb)
-  # ingressClassName: nginx
+  ingressClassName: nginx
