--- a/k8s/ingress/ingress.yaml
+++ b/k8s/ingress/ingress.yaml
@@ -20,4 +20,12 @@ spec:
                 port:
                   number: 3000
             path: /
+
+          # - pathType: Prefix
+          #   backend:
+          #     service:
+          #       name: influxdb-service
+          #       port:
+          #         number: 8086
+          #   path: /
   ingressClassName: nginx
