--- a/k8s/ingress/ingress.yaml
+++ b/k8s/ingress/ingress.yaml
@@ -13,19 +13,20 @@ spec:
   rules:
     - http:
         paths:
-          - pathType: Prefix
-            backend:
-              service:
-                name: grafana-service
-                port:
-                  number: 3000
-            path: /
-
           # - pathType: Prefix
           #   backend:
           #     service:
-          #       name: influxdb-service
+          #       name: grafana-service
           #       port:
-          #         number: 8086
+          #         number: 3000
           #   path: /
+
+          - pathType: Prefix
+            path: /
+            backend:
+              service:
+                name: influxdb-service
+                port:
+                  number: 8086
+
   ingressClassName: nginx
