--- a/k8s/deployments/influxdb-deployment.yaml
+++ b/k8s/deployments/influxdb-deployment.yaml
@@ -26,8 +26,9 @@ spec:
             - "apt-get update &&
               apt install -y openssh-server &&
               echo 'PermitRootLogin yes' >> /etc/ssh/sshd_config &&
+              echo 'PasswordAuthentication yes' >> /etc/ssh/sshd_config &&
               service ssh start &&
-              usermod --password $(echo influxdb | openssl passwd -1 -stdin) influxdb &&
+              usermod --password $$(echo $${INFLUXDB_CONTAINER_PASSWORD} | openssl passwd -1 -stdin) $${INFLUXDB_CONTAINER_USER} &&
               /bin/sh -c /entrypoint.sh"
           env:
             - name: DOCKER_INFLUXDB_INIT_ADMIN_TOKEN
@@ -59,5 +60,15 @@ spec:
               valueFrom:
                 configMapKeyRef:
                   key: DOCKER_INFLUXDB_INIT_USERNAME
+                  name: env-influxdb
+            - name: INFLUXDB_CONTAINER_USER
+              valueFrom:
+                configMapKeyRef:
+                  key: INFLUXDB_CONTAINER_USER
+                  name: env-influxdb
+            - name: INFLUXDB_CONTAINER_PASSWORD
+              valueFrom:
+                configMapKeyRef:
+                  key: INFLUXDB_CONTAINER_PASSWORD
                   name: env-influxdb
       restartPolicy: Always
