--- a/k8s/deployments/disk_usage_cronjob-deployment.yaml
+++ b/k8s/deployments/disk_usage_cronjob-deployment.yaml
@@ -1,23 +1,47 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: grafana-deployment
+  name: disk_usage_cronjob-deployment
   namespace: app
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: grafana
+      app: disk_usage_cronjob
   template:
     metadata:
       labels:
-        app: grafana
+        app: disk_usage_cronjob
     spec:
       containers:
-        - name: grafana
-          image: grafana/grafana
-          ports:
-            - containerPort: 3000
-          stdin: true
-          tty: true
+        # - args:
+        #     - sh
+        #     - -c
+        #     - "/wait-for-it.sh $${INFLUXDB_CONTAINER_HOST}:$${INFLUXDB_CONTAINER_PORT} --strict -- sshpass -p $${INFLUXDB_CONTAINER_PASSWORD} ssh-copy-id -i /root/.ssh/id_rsa.pub -o StrictHostKeyChecking=no $${INFLUXDB_CONTAINER_USER}@$${INFLUXDB_CONTAINER_HOST} &&
+        #       python main.py"
+        image: muhadel/disk_usage_cronjob
+        name: disk-usage-cronjob
+        stdin: true
+        tty: true
+        env:
+          - name: INFLUXDB_CONTAINER_USER
+            valueFrom:
+              configMapKeyRef:
+                key: INFLUXDB_CONTAINER_USER
+                name: env-influxdb
+          - name: INFLUXDB_CONTAINER_PASSWORD
+            valueFrom:
+              configMapKeyRef:
+                key: INFLUXDB_CONTAINER_PASSWORD
+                name: env-influxdb
+          - name: INFLUXDB_CONTAINER_HOST
+            valueFrom:
+              configMapKeyRef:
+                key: INFLUXDB_CONTAINER_HOST
+                name: env-influxdb
+          - name: INFLUXDB_CONTAINER_PORT
+            valueFrom:
+              configMapKeyRef:
+                key: INFLUXDB_CONTAINER_PORT
+                name: env-influxdb
       restartPolicy: Always
