--- a/k8s/deployments/grafana-deployment.yaml
+++ b/k8s/deployments/grafana-deployment.yaml
@@ -21,5 +21,5 @@ spec:
           stdin: true
           tty: true
       hostNetwork: true
-      dnsPolicy: ClusterFirstWithHostNet
+      dnsPolicy: Default
       restartPolicy: Always
