--- a/k8s/configmap/env-cronjob-configmap.yaml
+++ b/k8s/configmap/env-cronjob-configmap.yaml
@@ -6,7 +6,7 @@ data:
   INFLUXDB_ORG: my-org
   INFLUXDB_BUCKET: P@default
   INFLUXDB_ADMIN_TOKEN: this-is-my-super-secret-token
-  INFLUXDB_CONTAINER_HOST: influxdb
+  INFLUXDB_CONTAINER_HOST: "{{INFLUXDB_POD_IP}}"
   INFLUXDB_CONTAINER_PORT: "8086"
   INFLUXDB_CONTAINER_USER: root
   INFLUXDB_CONTAINER_PASSWORD: root123
