--- a/k8s/ingress/ingress-1.yaml
+++ b/k8s/ingress/ingress-1.yaml
@@ -6,6 +6,7 @@ metadata:
   annotations:
     # kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/app-root: /app1
     nginx.ingress.kubernetes.io/use-regex: "true"
   labels:
     name: ingress-service
