--- a/k8s/configmap/env-cronjob-configmap.yaml
+++ b/k8s/configmap/env-cronjob-configmap.yaml
@@ -4,7 +4,7 @@ data:
   INFLUXDB_USERNAME: admin
   INFLUXDB_PASSWORD: P@ssw0rd123
   INFLUXDB_ORG: my-org
-  INFLUXDB_BUCKET: tradelens
+  INFLUXDB_BUCKET: default
   INFLUXDB_ADMIN_TOKEN: this-is-my-super-secret-token
   INFLUXDB_CONTAINER_HOST: "{{INFLUXDB_POD_IP}}"
   INFLUXDB_CONTAINER_PORT: "8086"
