--- a/k8s/configmap/env-influxdb-configmap.yaml
+++ b/k8s/configmap/env-influxdb-configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 data:
   DOCKER_INFLUXDB_INIT_ADMIN_TOKEN: this-is-my-super-secret-token
-  DOCKER_INFLUXDB_INIT_BUCKET: tradelens
+  DOCKER_INFLUXDB_INIT_BUCKET: default
   DOCKER_INFLUXDB_INIT_MODE: setup
   DOCKER_INFLUXDB_INIT_ORG: my-org
   DOCKER_INFLUXDB_INIT_PASSWORD: P@ssw0rd123
